# stellarease

./: .gitignore  README.md  explore-schema.mjs  mercury.earning.json  mercury.json  next.config.mjs  package.json  pnpm-lock.yaml  server.js  soroban-events.ts
.stellar/identity/: default.toml
app/: globals.css  layout.tsx  page.tsx
app/api/auth/: route.ts
app/api/mercury/: route.ts
app/api/passkey/: route.ts
app/api/transactions/: route.ts
app/auth/: page.tsx
app/dashboard/: page.tsx
app/send/: page.tsx
app/settings/: page.tsx
app/transactions/: page.tsx
contracts/: Cargo.toml  Makefile
contracts/earning-policy/: Cargo.toml
contracts/earning-policy/src/: lib.rs
contracts/smart-wallet/src/: lib.rs
contracts/spending-policy/: Cargo.toml
contracts/spending-policy/src/: lib.rs
lib/: common.ts
lib/contracts/smart-wallet/: README.md  package.json
lib/contracts/smart-wallet/src/: index.ts
lib/hooks/: use-mobile.ts  use-passkey.ts  use-scroll-animation.ts  use-transactions.ts
lib/transactions/: xlm.ts
scripts/: deploy-zephyr.ts
utils/: README.md  check-mercury.ts  delete-program.js  mercury-test.ts
