[package]
name = "earning-policy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0-rc.3.2" }
smart-wallet-interface = { path = "../smart-wallet-interface" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0-rc.3.2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
